OCaml 3.13.0:
-------------

- The official name of the language is now OCaml.
- Warning 28 is now enabled by default.

Language features:
- Added GADTs to the language. See testsuite/tests/typing-gadts for
  the syntax and some examples of use. Please use -principal for testing.
- It is now possible to omit type annotations when packing and unpacking
  first-class modules. The type-checker attempts to infer it from the context.
  Using the -principal option guarantees forward compatibility.
- New (module M) and (module M : S) syntax in patterns, for immediate
  unpacking of a first-class module.

Compilers:
- Revised simplification of let-alias (PR#5205, PR#5288)

Native-code compiler:
- Optimized handling of partially-applied functions (PR#5287)

Standard library:
- Added float functions "hypot" and "copysign" (PR#3806, PR#4752, PR#5246)
- Hashtbl:
    . Statistically-better generic hash function based on Murmur 3 (PR#5225)
    . Fixed behavior of generic hash function w.r.t. -0.0 and NaN (PR#5222)
    . Added optional "seed" parameter to Hashtbl.create for diversification
    . Added new functorial interface "MakeSeeded" to support diversification
      with user-provided hash functions.

Bug Fixes:
- PR#5322: type abbreviations expanding to a universal type variable
- PR#5330: thread tag with '.top' and '.inferred.mli' targets

OCaml 3.12.1:
----------------------

Bug fixes:
- PR#4345, PR#4767: problems with camlp4 printing of float values
- PR#4380: ocamlbuild should not use tput on windows
- PR#4487, PR#5164: multiple 'module type of' are incompatible
- PR#4552: ocamlbuild does not create symlinks when using '.itarget' file
- PR#4673, PR#5144: camlp4 fails on object copy syntax
- PR#4702: system threads: cleanup tick thread at exit
- PR#4732: camlp4 rejects polymorphic variants using keywords from macros
- PR#4778: Win32/MSVC port: rare syntax error in generated MASM assembly file
- PR#4794, PR#4959: call annotations not generated by ocamlopt